--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,10 +2,10 @@
 .container-fluid {
   background-color: #c1c6ca;
   font-family: 'Times New Roman', Times, serif;
-  padding: 20px;
+  padding-top: 20px;
 }
 
-.container-fluid .section-title h3 {
+.section-title h3 {
   color: #333; /* Color de texto más suave */
   text-align: center;
   font-size: 36px; /* Aumenta el tamaño para destacarlo más */
